app/assets/stylesheets/layout.css.scss
@import 'compass/css3';
@import '_config';

#coreon-top {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2;
}

#coreon-filters {
  position: absolute;
  width: 100%;
  padding: 10px;
  background-color: $beigecolor;
  @include retina-stripes("blue");
}

#coreon-header {
  @include box-sizing(border-box);
  background:image-url("layout/top-bg.jpg");
  padding:6px;
  width: 101%;
  @include single-box-shadow(rgba(0,0,0,0.8), 0, -1px, 2px, false, inset);
  
  @media only screen and (-webkit-min-device-pixel-ratio: 2) {
      background-image: image-url('layout/top-bg@2x.jpg');
      @include background-size(199px 65px);
  }
}

#coreon-modal {
  position: relative;
  height: 0;
  width: 100%;
  z-index: 1000;
}

#coreon-widgets {
  position: absolute;
  right: 0;
  width: $widget-width;
  background-color: $greycolor;
  @include box-shadow(rgba(black, 0.3) -2px 0px 4px);

  &:after {
    content:"";
    display: block;
    width: auto;
    height: 12px;
    @include background(linear-gradient(rgba(white, 0.3), rgba(white, 0)));
    @include box-shadow(rgba(white, 0.4) 0px 1px 1px inset, rgba(black, 0.1) -1px -1px 1px inset);
  }

  .ui-resizable-w {
    position: absolute;
    top: 0;
    left: -7px;
    width: 12px;
    height: 100%;
    cursor: w-resize;
    &:before {
      content:"";
      display: block;
      position: relative;
      left: 7px;
      height: 100%;
      width: 5px;
    };
    &:hover {
      &:before {
      @include box-shadow(rgba(black, 0.1) -3px 0px 3px);
      };
    };
  }
  &.ui-resizable-resizing {
    @include box-shadow(rgba(black, 0.4) -2px 0px 8px);
  }
}

#coreon-main {
  padding: 12px 100px 60px 5%;
  margin-top: 76px;
}

